# rdo_replace_resolver

./: .gitignore  CMakeLists.txt
cmake/defaults/: pxrConfigHoudini.cmake
etc/profile.d/: replaceResolver.sh
